--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typeorm": "^0.3.7",
+    "uuid": "^9.0.0",
     "vitest": "^0.19.1",
     "web-streams-polyfill": "^3.2.1"
   },
@@ -70,6 +71,7 @@
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "@types/react-pdf": "^5.7.2",
+    "@types/uuid": "^8.3.4",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
     "json-loader": "^0.5.7",
