--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "init-db": "ts-node --project ./tsconfig.build.json ./backend/init-db.ts",
     "build": "next build && next export",
     "cp-pdfjs": "cp -r ./node_modules/pdfjs-dist ./public/",
+    "fidelity-check": "rm -rf backend/ocr_cache/* && npm run init-db && output='git status --porcelain | head -1';if $output; then exit 1; else exit 0; fi && echo ok",
     "postbuild": "next-sitemap",
     "test": "vitest",
     "start": "next start",
