--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Set up MySQL
       run: |
         apt-get update
-        apt-get install -y mysql-client
+        apt-get install -y --force-yes mysql-client
         mysql --host mysql -e 'CREATE DATABASE banned_history CHARACTER SET utf8 COLLATE utf8_general_ci;' -uroot -proot_password
     - name: Use Node.js
       uses: actions/setup-node@v3
