feat:local-search-engine

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "dev": "COMMIT_HASH=$(git rev-parse HEAD) next dev",
     "dev:ocr-server": "ts-node --project ./tsconfig.build.json ./backend/ocr-server.ts",
+    "dev:es-server": "ts-node --project ./tsconfig.build.json ./backend/es-server.ts",
     "init-db": "ts-node --project ./tsconfig.build.json ./backend/init-db.ts",
+    "init-es": "ts-node --project ./tsconfig.build.json ./backend/init-es.ts",
     "build": "next build && next export",
     "cp-pdfjs": "cp -r ./node_modules/pdfjs-dist ./public/",
     "fidelity-check": "rm -rf backend/ocr_cache/* && npm run init-db && output='git status --porcelain | head -1';if $output; then exit 1; else exit 0; fi && echo ok",
@@ -15,6 +17,7 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-decorators": "^7.18.9",
+    "@elastic/elasticsearch": "^8.5.0",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
@@ -32,6 +35,7 @@
     "dbffile-fix-decoding": "^1.8.1",
     "diff-match-patch": "^1.0.5",
     "dommatrix": "^1.0.3",
+    "dotenv": "^16.0.3",
     "epub": "^1.2.1",
     "express": "^4.18.1",
     "fs-extra": "^10.1.0",
@@ -40,7 +44,7 @@
     "jsdom": "^20.0.0",
     "json5": "^2.2.1",
     "memo_file": "^1.1.0",
-    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "next": "12.2.4",
     "next-sitemap": "^3.1.13",
     "node-fetch": "^2.6.7",
