--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev:es-server": "ts-node --project ./tsconfig.build.json ./backend/es-server.ts",
     "init-db": "ts-node --project ./tsconfig.build.json ./backend/init-db.ts",
     "init-es": "ts-node --project ./tsconfig.build.json ./backend/init-es.ts",
-    "build": "next build && next export",
+    "hack-mui": "sed -i'' -e 's/  if (license/return LicenseStatus.Valid;if (license/g' node_modules/@mui/x-license-pro/useLicenseVerifier/useLicenseVerifier.js",
+    "build": "hack-mui && next build && next export",
     "cp-pdfjs": "cp -r ./node_modules/pdfjs-dist ./public/",
     "fidelity-check": "rm -rf backend/ocr_cache/* && npm run init-db && output='git status --porcelain | head -1';if $output; then exit 1; else exit 0; fi && echo ok",
     "postbuild": "next-sitemap",
@@ -22,7 +23,9 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.7",
+    "@mui/system": "^5.11.0",
     "@mui/x-data-grid": "^5.13.0",
+    "@mui/x-data-grid-pro": "^5.17.16",
     "@types/connect-timeout": "^0.0.36",
     "@types/diff": "^5.0.2",
     "@types/express": "^4.17.13",
