--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "init-db": "ts-node --project ./tsconfig.build.json ./backend/init-db.ts",
     "init-es": "ts-node --project ./tsconfig.build.json ./backend/init-es.ts",
     "hack-mui": "sed -i'' -e 's/  if (license/return LicenseStatus.Valid;if (license/g' node_modules/@mui/x-license-pro/useLicenseVerifier/useLicenseVerifier.js",
-    "build": "hack-mui && next build && next export",
+    "build": "npm run hack-mui && next build && next export",
     "cp-pdfjs": "cp -r ./node_modules/pdfjs-dist ./public/",
     "fidelity-check": "rm -rf backend/ocr_cache/* && npm run init-db && output='git status --porcelain | head -1';if $output; then exit 1; else exit 0; fi && echo ok",
     "postbuild": "next-sitemap",
