--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,9 @@
 [submodule "public/books/archives5"]
 	path = public/books/archives5
 	url = git@github.com:banned-historical-archives/banned-historical-archives5.git
+[submodule "public/media0"]
+	path = public/media0
+	url = git@github.com:banned-historical-archives/banned-historical-archives6.git
+[submodule "public/media1"]
+	path = public/media1
+	url = git@github.com:banned-historical-archives/banned-historical-archives7.git
