--- a/.github/workflows/media.yml
+++ b/.github/workflows/media.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image:  node:10.16-jessie
+      options: --user root
     steps:
       - name: Get Time
         id: time
@@ -22,6 +23,7 @@ jobs:
         uses: filipstefansson/uuid-action@v1
         with:
           name: media${{ env.GITHUB_ACTION }}${{ env.GITHUB_RUN_NUMBER }}${{ github.sha }}${{ steps.time.outputs.time }}
+      - run: add-apt-repository -y ppa:git-core/ppa
       - run: apt update
       - run: apt install git -y
       - uses: actions/checkout@v3
