--- a/.github/workflows/media.yml
+++ b/.github/workflows/media.yml
@@ -62,6 +62,8 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GH_PAT }}
         run: |
+          cd ../..
+          pwd
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add .
