--- a/.github/workflows/media.yml
+++ b/.github/workflows/media.yml
@@ -46,8 +46,8 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_PAT }}
         run: |
           cd public/archives${{ steps.get_archive_id.outputs.archive_id }}
-          git config user.name github-actions
-          git config user.email github-actions@github.com
+          git config --global user.name github-actions
+          git config --global user.email github-actions@github.com
           git checkout -b feat-${{ steps.generate-uuid.outputs.uuid }}
           git add .
           git commit -m 'feat: ${{ github.event.issue.title }}'
