--- a/.github/workflows/media.yml
+++ b/.github/workflows/media.yml
@@ -45,7 +45,6 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GH_PAT }}
         run: |
-          git checkout -b feat-${{ steps.generate-uuid.outputs.uuid }}
           cd public/archives${{ steps.get_archive_id.outputs.archive_id }}
           git config --global user.name github-actions
           git config --global user.email github-actions@github.com
@@ -62,7 +61,7 @@ jobs:
           cd ../..
           git add .
           git commit -m 'feat: ${{ github.event.issue.title }}'
-          git push origin feat-${{ steps.generate-uuid.outputs.uuid }}
+          git push origin HEAD:feat-${{ steps.generate-uuid.outputs.uuid }}
           curl \
           -X POST \
           -H "Accept: application/vnd.github+json" \
