--- a/.gitmodules
+++ b/.gitmodules
@@ -1,20 +1,20 @@
-[submodule "public/books/archives0"]
-	path = public/books/archives0
+[submodule "public/archives0"]
+	path = public/archives0
 	url = git@github.com:banned-historical-archives/banned-historical-archives0.git
-[submodule "public/books/archives1"]
-	path = public/books/archives1
+[submodule "public/archives1"]
+	path = public/archives1
 	url = git@github.com:banned-historical-archives/banned-historical-archives1.git
-[submodule "public/books/archives2"]
-	path = public/books/archives2
+[submodule "public/archives2"]
+	path = public/archives2
 	url = git@github.com:banned-historical-archives/banned-historical-archives2.git
-[submodule "public/books/archives3"]
-	path = public/books/archives3
+[submodule "public/archives3"]
+	path = public/archives3
 	url = git@github.com:banned-historical-archives/banned-historical-archives3.git
-[submodule "public/books/archives4"]
-	path = public/books/archives4
+[submodule "public/archives4"]
+	path = public/archives4
 	url = git@github.com:banned-historical-archives/banned-historical-archives4.git
-[submodule "public/books/archives5"]
-	path = public/books/archives5
+[submodule "public/archives5"]
+	path = public/archives5
 	url = git@github.com:banned-historical-archives/banned-historical-archives5.git
 [submodule "public/archives6"]
 	path = public/archives6
