--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "postbuild": "next-sitemap",
     "test": "vitest",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier": "prettier -w ."
   },
   "dependencies": {
     "@babel/plugin-proposal-decorators": "^7.18.9",
@@ -83,6 +84,7 @@
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
     "json-loader": "^0.5.7",
+    "prettier": "2.8.3",
     "typescript": "4.7.4"
   }
 }
