upgrade next.js

--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "json5": "^2.2.2",
     "memo_file": "^1.1.0",
     "mysql2": "^2.3.3",
-    "next": "12.2.4",
+    "next": "^13.1.6",
     "next-sitemap": "^3.1.13",
     "node-fetch": "^2.6.7",
     "pdf.js": "^0.1.0",
