--- a/package.json
+++ b/package.json
@@ -84,6 +84,6 @@
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
     "prettier": "2.8.3",
-    "typescript": "4.7.4"
+    "typescript": "^4.9.5"
   }
 }
