--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,9 @@ jobs:
           # If we were running the job on the VM this would be localhost
           MYSQL_HOST: mysql
           MYSQL_PORT: 3306
+      - name: Load submodule
+        run: git submodule update public/archives9
+        run: ls public/archives9
       - name: Set up MySQL
         run: |
           apt-get update
