--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,9 @@
 [submodule "public/archives7"]
 	path = public/archives7
 	url = git@github.com:banned-historical-archives/banned-historical-archives7.git
+[submodule "public/archives8"]
+	path = public/archives8
+	url = git@github.com:banned-historical-archives/banned-historical-archives8.git
+[submodule "public/archives9"]
+	path = public/archives9
+	url = git@github.com:banned-historical-archives/banned-historical-archives9.git
