--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,9 +23,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-        with:
-          token: ${{ secrets.GH_PAT}}
-      - run: cd public && rm -rf archives9 && git clone git@github.com:banned-historical-archives/banned-historical-archives9.git archives9
+      - run: cd public && rm -rf archives9 && git clone --depth=1 https://github.com/banned-historical-archives/banned-historical-archives9.git archives9
 
       - name: Set up MySQL
         env:
