--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
   "dependencies": {
     "@babel/plugin-proposal-decorators": "^7.18.9",
     "@elastic/elasticsearch": "^8.5.0",
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
-    "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.8.7",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.0",
     "@mui/system": "^5.11.0",
-    "@mui/x-data-grid": "^5.13.0",
-    "@mui/x-data-grid-pro": "^5.17.16",
+    "@mui/x-data-grid": "^5.17.0",
+    "@mui/x-data-grid-pro": "^5.17.0",
     "@types/connect-timeout": "^0.0.36",
     "@types/diff": "^5.0.2",
     "@types/express": "^4.17.13",
@@ -55,8 +55,8 @@
     "pdf.js": "^0.1.0",
     "pdfjs-dist": "2.12",
     "raw-loader": "^4.0.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-markdown": "^8.0.3",
     "react-pdf": "^5.7.2",
     "remark-gfm": "^3.0.1",
@@ -65,8 +65,7 @@
     "typeorm": "^0.3.7",
     "uuid": "^9.0.0",
     "vitest": "^0.19.1",
-    "web-streams-polyfill": "^3.2.1",
-    "zwitch": "^2.0.2"
+    "web-streams-polyfill": "^3.2.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.18.9",
@@ -77,9 +76,9 @@
     "@types/diff-match-patch": "^1.0.32",
     "@types/fs-extra": "^9.0.13",
     "@types/jsdom": "^20.0.0",
-    "@types/node": "18.6.1",
-    "@types/react": "18.0.15",
-    "@types/react-dom": "18.0.6",
+    "@types/node": "^18.6.1",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "@types/react-pdf": "^5.7.2",
     "@types/uuid": "^8.3.4",
     "eslint": "8.20.0",
