--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,9 +36,9 @@ jobs:
           apt-get update
           apt-get install -y --force-yes mysql-client
           mysql --host mysql -e 'CREATE DATABASE banned_history CHARACTER SET utf8 COLLATE utf8_general_ci;' -uroot -proot_password
-          apt-get install -y --force-yes p7zip-full p7zip-rar
-          7z x public/archives10/1976年12月.7z
-          ls public/archives10/1976年12月
+          apt-get install -y --force-yes p7zip-full
+          7z x public/archives10/7z/1976年12月.7z
+          ls public/archives10/7z/1976年12月
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
