--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
           apt-get install -y --force-yes mysql-client
           mysql --host mysql -e 'CREATE DATABASE banned_history CHARACTER SET utf8 COLLATE utf8_general_ci;' -uroot -proot_password
           apt-get install -y --force-yes p7zip-full
-          LC_ALL=C 7z x public/archives10/7z/1976年12月.7z -y
+          LANG=zh_CN.UTF-8 LC_ALL=C 7z x public/archives10/7z/1976年12月.7z -y
           ls public/archives10/7z/1976年12月
       - name: Use Node.js
         uses: actions/setup-node@v3
