--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
           MYSQL_PORT: 3306
         run: |
           apt-get update
-          apt-get install -y --force-yes mysql-client
+          apt-get install -y --force-yes mysql-client p7zip-full
           mysql --host mysql -e 'CREATE DATABASE banned_history CHARACTER SET utf8 COLLATE utf8_general_ci;' -uroot -proot_password
       - name: Use Node.js
         uses: actions/setup-node@v3
