--- a/.gitmodules
+++ b/.gitmodules
@@ -30,4 +30,4 @@
 	url = git@github.com:banned-historical-archives/banned-historical-archives9.git
 [submodule "public/archives10"]
 	path = public/archives10
-	url = git@github.com-bha:banned-historical-archives/banned-historical-archives10.git
+	url = git@github.com:banned-historical-archives/banned-historical-archives10.git
