--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,8 +9,6 @@ jobs:
 
     # runs all of the steps inside the specified container rather than on the VM host.
     # Because of this the network configuration changes from host based network to a container network.
-    container:
-      image: node:10.16-jessie
     services:
       mysql:
         image: mysql:5.7
@@ -31,17 +29,17 @@ jobs:
           MYSQL_HOST: mysql
           MYSQL_PORT: 3306
         run: |
-          apt-get update
-          apt-get install -y --force-yes mysql-client p7zip-full
-          mysql --host mysql -e 'CREATE DATABASE banned_history CHARACTER SET utf8 COLLATE utf8_general_ci;' -uroot -proot_password
+          sudo apt-get update
+          sudo apt-get install -y --force-yes mysql-client p7zip-full language-pack-zh-han*
+          mysql -e 'CREATE DATABASE banned_history CHARACTER SET utf8 COLLATE utf8_general_ci;' -uroot -proot_password
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 17.9
       - run: npm install
       - run: cp -r ./node_modules/pdfjs-dist ./public/
-      - run: NODE_OPTIONS="--max-old-space-size=8192" CI=true npm run init-db
-      - run: SITE_URL='https://banned-historical-archives.github.io' CI=true COMMIT_HASH="${{ github.sha }}" npm run build
+      - run: NODE_OPTIONS="--max-old-space-size=8192" npm run init-db
+      - run: SITE_URL='https://banned-historical-archives.github.io' COMMIT_HASH="${{ github.sha }}" npm run build
       - run: touch out/.nojekyll
       - run: git config --global http.postBuffer 2097152000
       - name: Deploy to GitHub Pages
