--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "hack-mui": "sed -i'' -e 's/return React/return LicenseStatus.Valid;return React/g' node_modules/@mui/x-license-pro/useLicenseVerifier/useLicenseVerifier.js",
     "build": "npm run hack-mui && next build && next export && rm -rf out/archives*",
     "build-txt": "ts-node --project ./tsconfig.build.json ./backend/build-txt.ts",
+    "build-readme": "ts-node --project ./tsconfig.build.json ./backend/build-readme.ts",
     "cp-pdfjs": "cp -r ./node_modules/pdfjs-dist ./public/",
     "fidelity-check": "rm -rf backend/ocr_cache/* && npm run init-db && output='git status --porcelain | head -1';if $output; then exit 1; else exit 0; fi && echo ok",
     "postbuild": "next-sitemap",
