--- a/.github/workflows/build-readme.yml
+++ b/.github/workflows/build-readme.yml
@@ -41,5 +41,6 @@ jobs:
       - run: git config --global http.postBuffer 2097152000
       - run: git config --global user.email "you@example.com"
       - run: git config --global user.name "Your Name"
-      - run: git commit -a
+      - run: git add .
+      - run: git commit -m 'i'
       - run: git push
