--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,6 +52,7 @@ jobs:
       - run: git reset --hard
       - run: mv out/* ./
       - run: touch .nojekyll
+      - run: rm -rf node_modules && rm -rf .next
       - run: git add .
       - run: git commit -m update
       - run: git push origin x:gh-pages -f
