--- a/.github/workflows/build-readme.yml
+++ b/.github/workflows/build-readme.yml
@@ -29,13 +29,13 @@ jobs:
           MYSQL_PORT: 3306
         run: |
           sudo apt-get update
-          sudo apt-get install -y --force-yes mysql-client p7zip-full language-pack-zh-han*
           mysql --host 127.0.0.1 -e 'CREATE DATABASE banned_history CHARACTER SET utf8 COLLATE utf8_general_ci;' -uroot -proot_password
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 17.9
       - run: npm install
+      - run: NODE_OPTIONS="--max-old-space-size=8192" npm run init-db
       - run: NODE_OPTIONS="--max-old-space-size=8192" npm run build-readme
       - run: git config --global http.postBuffer 2097152000
       - run: git config --global user.email "you@example.com"
