--- a/.github/workflows/build-txt.yml
+++ b/.github/workflows/build-txt.yml
@@ -37,6 +37,7 @@ jobs:
         with:
           node-version: 17.9
       - run: npm install
+      - run: NODE_OPTIONS="--max-old-space-size=8192" npm run init-db
       - run: NODE_OPTIONS="--max-old-space-size=8192" npm run build-txt
       - run: git config --global http.postBuffer 2097152000
       - run: git config --global user.email "you@example.com"
