--- a/.github/workflows/ocr.yml
+++ b/.github/workflows/ocr.yml
@@ -40,6 +40,9 @@ jobs:
       - run: git config --global --add safe.directory /__w/banned-historical-archives.github.io/banned-historical-archives.github.io/public/archives4
       - run: git config --global --add safe.directory /__w/banned-historical-archives.github.io/banned-historical-archives.github.io/public/archives5
       - run: git config --global --add safe.directory /__w/banned-historical-archives.github.io/banned-historical-archives.github.io
+      - run: git config --system credential.helper store
+      - run: echo "https://banned-historical-archives:${{ secrets.GH_PAT}}@github.com" > ~/.git-credentials
+      - run: git submodule init public/archives2 && git submodule update
       - uses: actions/setup-node@v3.4.1
         with:
           node-version: 16
@@ -50,7 +53,7 @@ jobs:
         env:
           BODY: ${{ github.event.issue.body }}
           TITLE: ${{ github.event.issue.title }}
-      - run: git config --global submodule.token '${{ secrets.GH_PAT}}' && git submodule init public/archives${{ steps.get_archive_id.outputs.archive_id }} && git submodule update
+      - run: git submodule init public/archives${{ steps.get_archive_id.outputs.archive_id }} && git submodule update
       - id: action_with_json_output
         run: echo ::set-output name=data::$(npx ts-node --project ./tsconfig.build.json backend/ocr-gitworkflow.ts)
         env:
